--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,80 +1,1 @@
-body {
-    padding-top: 50px
-}
-#login, #upload {
-  margin-top: 155px;
-}
-
-th.prev, th.next, td.day {
-	cursor: pointer;
-}
-
-.page-header {
-  border-bottom: 0px;
-}
-
-.search-users {
-    padding-bottom: 8px;
-    margin: 36px 0 18px;
-}
-.new-user {
-    padding-bottom: 8px;
-    margin: 58px 0 18px;
-}
-
-.users-hr {
-  margin-top: -30px;
-}
-
-#ConfirmPasswordLabel {
-  display: none
-}
-
-.green {
-    margin-left: 5px;
-    color: green;
-}
-.red {
-    margin-left: 5px;
-    color: red;
-}
-
-.new-group {
-    margin-top: 55px;
-}
-
-.alert-success {
-  display: none;
-}
-
-.chooseGroupUser {
-  margin-top: 7px;
-}
-
-.overlay {
-    display: none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    background: #fcfcfc;
-    opacity: 0.8;
-    filter: alpha(opacity=80);
-    z-index: 999;
-}
-.spinner {
-    width: 42px;
-    height: 42px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    
-}
-.active {
-  color: #d9230f;
-  text-decoration: none;
-}
-thead{
- background-color: #c1c0c0;
-}
+body{padding-top:50px}body #login,body #upload{margin-top:155px}body td.day,body th.next,body th.prev{cursor:pointer}body .page-header{border-bottom:0}body .search-users{margin:36px 0 18px;padding-bottom:8px}body .new-user{margin:58px 0 18px;padding-bottom:8px}body .users-hr{margin-top:-30px}body #ConfirmPasswordLabel{display:none}body .green{color:green;margin-left:5px}body .red{color:red;margin-left:5px}body .new-group{margin-top:55px}body .alert-success{display:none}body .chooseGroupUser{margin-top:7px}body .overlay{background:#fcfcfc;bottom:0;display:none;filter:alpha(opacity=80);left:0;opacity:.8;position:absolute;right:0;top:0;z-index:999}body .spinner{height:42px;left:50%;position:absolute;top:50%;width:42px}body .active{color:#d9230f;text-decoration:none}body thead{background-color:#c1c0c0}body button{border-radius:0!important;box-shadow:none!important;border:1px solid #eaeaea;padding:10px;min-width:200px}body form input[type=date],body form input[type=email],body form input[type=password],body form input[type=text],body form select{border-radius:0!important;box-shadow:none!important;border:1px solid #eaeaea;padding:10px;width:100%}body form button,body form input[type=submit]{border-radius:0!important;box-shadow:none!important;border:1px solid #eaeaea;padding:10px;min-width:200px}
