Pagination for Audit

--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -111,8 +111,13 @@
     
     </tbody>
   </table>
+</div>
 
-   <% if (typeof user !== 'undefined') {
+<div class="pagination">
+
+</div>
+
+<% if (typeof user !== 'undefined') {
                   if(user.roles!="Analyst"){
                %>
  <div class="col-lg-10 col-lg-offset-2">
@@ -121,11 +126,3 @@
  <%  
   }
    }%>
-
-
-
-
-
-
-
-</div>
