--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -61,9 +61,9 @@
           </div>
           <%  }
            }%>
-           <div class="form-group">
-            <div class="col-lg-3 col-lg-offset-2">
-             <label for="pending_task" class="control-label">Pending Task</label>
+          <div class="form-group">
+            <label for="toDate" class="col-lg-2 control-label">Pending Task:</label>
+            <div class="col-lg-3">
               <input type="checkbox" id="pending_task" name="pending_task" value="PendingTask">
             </div>
           </div>
