--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -40,7 +40,7 @@
                   <a href="/users">Users</span></a>
                 </li>
                 <li class="dropdown">
-                  <a href="/stats">Stats</span></a>
+                  <a href="/stats">Statistics</span></a>
                 </li>
                 <% } %>
                 <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Analyst')) || (_und.contains(user.roles, 'Lead'))) { %>
