prefill dte on view tasks

--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -97,12 +97,12 @@
   <script src="../../components/jquery/dist/jquery.min.js"></script>
   <script src="../../components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="../../components/underscore/underscore-min.js"></script>
-  
   <script src="../../js/bootstrap-datepicker.js"></script>
-
   <script src="../../js/jquery-ui.js"></script>
-
   <script src="../../js/jquery.jqplot.min.js"></script>
   <script src="../../js/jqplot.pieRenderer.js"></script>
+  <script src="../../js/jquery-dateFormat.min.js"></script>
   <script src="../../js/custom.js"></script>
+  <script src="../../js/custom_1.js"></script>
+
 </html>
