--- a/app/views/tasks/audit_search_task.ejs
+++ b/app/views/tasks/audit_search_task.ejs
@@ -28,12 +28,9 @@
        }
        }%>
          <td><input type="hidden" id="user_role" name="user_role" value="<%=tasks[i]['_id']%>"> </td>
-         <td> </td>
-         <td> </td>
-         <td> </td>
    </tr>
         
  <% } } %>
 <% } else { %>
- <tr><td></td><td></td><td></td><td></td><td></td><td></td><td class="col-md-10">  No data Found</td></tr>
+ <tr><td></td><td></td><td></td><td></td><td></td><td></td><td class="col-md-10">  No data Found</td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 <% } %>
