--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -105,6 +105,7 @@
            }%>
             <th style="display:none;" data-field="_id">_id</th>
             <th style="display:none;" data-field="verifier_id">verifier_id</th>
+            <th style="width:200px">&nbsp;&nbsp;&nbsp;</th>
         </tr>
     </thead>
     <tbody id="users_list">
