--- a/app/views/tasks/view_task.ejs
+++ b/app/views/tasks/view_task.ejs
@@ -11,20 +11,20 @@
           <div class="form-group">
             <label for="fromDate" class="col-lg-2 control-label">From Date:</label>
             <div class="col-lg-3">
-              <input type="text" class="form-control datepicker" placeholder="yyyy-mm-dd" name="fromDate" value="" autocomplete="off">
+              <input type="text" class="form-control datepicker" id="viewTaskFromDate" placeholder="yyyy-mm-dd" name="fromDate" value="" autocomplete="off">
             </div>
           </div>
            <div class="form-group">
             <label for="toDate" class="col-lg-2 control-label">To Date:</label>
             <div class="col-lg-3">
-              <input type="text" class="form-control datepicker" placeholder="yyyy-mm-dd" name="toDate" value="" autocomplete="off">
+              <input type="text" class="form-control datepicker" id="viewTaskToDate" placeholder="yyyy-mm-dd" name="toDate" value="" autocomplete="off">
             </div>
           </div>
           
         
            <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
-              <button type="submit" class="btn btn-success">View Task</button>
+              <button type="submit" id="viewTaskSubmit" class="btn btn-success">View Task</button>
             </div>
           </div>
         
