--- a/app/views/users/edit_user.ejs
+++ b/app/views/users/edit_user.ejs
@@ -38,6 +38,9 @@
             <label for="inputRole" class="col-lg-2 control-label">Roles</label>
             <div class="col-lg-10">
               <div class="checkbox">
+                <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Manager" <%= _und.contains(user.roles, 'Manager') ? 'checked' : ""  %> value="Manager"> Manager
+              </div>
+              <div class="checkbox">
                 <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Lead" <%= _und.contains(user.roles, 'Lead') ? 'checked' : ""  %> value="Lead"> Lead
               </div>
               <div class="checkbox">
