--- a/app/views/users/new_user.ejs
+++ b/app/views/users/new_user.ejs
@@ -38,6 +38,9 @@
             <label for="inputRole" class="col-lg-2 control-label">Roles</label>
             <div class="col-lg-10">
               <div class="checkbox">
+                <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Manager"> Manager
+              </div>
+              <div class="checkbox">
                 <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Lead"> Lead
               </div>
               <div class="checkbox">
