updated date format in placeholder

--- a/app/views/tasks/upload.ejs
+++ b/app/views/tasks/upload.ejs
@@ -13,7 +13,7 @@
           <div class="form-group">
             <label for="inputPassword" class="col-lg-2 control-label">Date:</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control datepicker" placeholder="yyyy-mm-dd" name="date" value=""  required>
+              <input type="text" class="form-control datepicker" id="uploadDate" placeholder="mm/dd/yyyy" name="date" value=""  required>
             </div>
           </div>
           <div class="form-group">
