--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -11,13 +11,13 @@
           <div class="form-group">
             <label for="fromDate" class="col-lg-2 control-label">From Date:</label>
             <div class="col-lg-3">
-              <input type="text" class="form-control datepicker" placeholder="yyyy-mm-dd" name="fromDate" value="" autocomplete="off">
+              <input type="text" class="form-control datepicker" placeholder="mm/dd/yyyy" name="fromDate" value="" autocomplete="off">
             </div>
           </div>
            <div class="form-group">
             <label for="toDate" class="col-lg-2 control-label">To Date:</label>
             <div class="col-lg-3">
-              <input type="text" class="form-control datepicker" placeholder="yyyy-mm-dd" name="toDate" value="" autocomplete="off">
+              <input type="text" class="form-control datepicker" placeholder="mm/dd/yyy" name="toDate" value="" autocomplete="off">
             </div>
           </div>
            <% if (typeof user !== 'undefined') {
@@ -122,7 +122,7 @@
                   if(user.roles!="Analyst"){
                %>
  <div class="col-lg-10 col-lg-offset-2">
-         <button type="button" id="save_btn" class="btn btn-success">Save Data</button>
+   <button type="button" id="save_btn" class="btn btn-success">Save Data</button>
 </div>
  <%  
   }
