--- a/app/views/tasks/view_task.ejs
+++ b/app/views/tasks/view_task.ejs
@@ -11,13 +11,13 @@
           <div class="form-group">
             <label for="fromDate" class="col-lg-2 control-label">From Date:</label>
             <div class="col-lg-3">
-              <input type="text" class="form-control datepicker" id="viewTaskFromDate" placeholder="yyyy-mm-dd" name="fromDate" value="" autocomplete="off">
+              <input type="text" class="form-control datepicker" id="viewTaskFromDate" placeholder="mm/dd/yyyy" name="fromDate" value="" autocomplete="off">
             </div>
           </div>
            <div class="form-group">
             <label for="toDate" class="col-lg-2 control-label">To Date:</label>
             <div class="col-lg-3">
-              <input type="text" class="form-control datepicker" id="viewTaskToDate" placeholder="yyyy-mm-dd" name="toDate" value="" autocomplete="off">
+              <input type="text" class="form-control datepicker" id="viewTaskToDate" placeholder="mm/dd/yyyy" name="toDate" value="" autocomplete="off">
             </div>
           </div>
           
