--- a/app/views/users/stats.ejs
+++ b/app/views/users/stats.ejs
@@ -60,7 +60,7 @@
 
 <div class="col-lg-12">
 <%
-	if (locals.tasks && locals.tasks.length == 0) {
+	if (locals.tasks && locals.tasks.length == 0 || !locals.get_user_id) {
 		%>
 			<h3>No review found for this candidate.</h3>
 		<%
