--- a/app/views/tasks/audit_search_task.ejs
+++ b/app/views/tasks/audit_search_task.ejs
@@ -17,9 +17,10 @@
              // console.log(" Conditoionnon ==== ",(tasks[i]["is_correct"]==true));
            %>
           <td class="col-md-2"><%= tasks[i]['user_name']%> </td>
-           <td class="col-md-4">
-            correct  <input type="radio" name="correct<%= i %>" id="correct<%= i %>" value="Correct" <%= (tasks[i]["is_correct"]==true) ? 'checked' : ""%> />
-            InCorrect <input type="radio" name="correct<%= i %>" id="incorrect<%= i %>" value="InCorrect"<%=(tasks[i]["is_correct"]==false) ? 'checked' : ""%> />
+           <td class="col-md-4 table-inputs">
+            <input type="radio" name="correct<%= i %>" id="correct<%= i %>" value="Correct" <%= (tasks[i]["is_correct"]==true) ? 'checked' : ""%> /> Correct
+            <br/>
+            <input type="radio" name="correct<%= i %>" id="incorrect<%= i %>" value="InCorrect"<%=(tasks[i]["is_correct"]==false) ? 'checked' : ""%> /> InCorrect
          </td>
         <td class="col-md-2"> <input type="textarea" name="text_comment<%= i %>" value="<%=tasks[i]['verifier_comments']%>"/></td>
          <td class="col-md-2"><%= tasks[i]['verifier_name']%> </td>
