Changing column name S_No to Sr.No

--- a/app/views/tasks/view_task.ejs
+++ b/app/views/tasks/view_task.ejs
@@ -35,7 +35,7 @@
         <table id="excelDataTable" class="table table-striped table-hover ">
       <thead>
         <tr>
-            <th data-field="S_No">S_No</th>
+            <th data-field="S_No">Sr.No</th>
             <th data-field="query">query</th>
             <th data-field="query_flag">Query Flag</th>
             <th data-field="ad_creative">Ad Creative</th>
