--- a/app/views/tasks/audit_search_task.ejs
+++ b/app/views/tasks/audit_search_task.ejs
@@ -20,7 +20,7 @@
            <td class="col-md-4 table-inputs">
             <input type="radio" name="correct<%= i %>" id="correct<%= i %>" value="Correct" <%= (tasks[i]["is_correct"]==true) ? 'checked' : ""%> /> Correct
             <br/>
-            <input type="radio" name="correct<%= i %>" id="incorrect<%= i %>" value="InCorrect"<%=(tasks[i]["is_correct"]==false) ? 'checked' : ""%> /> Incorrect
+            <input type="radio" name="correct<%= i %>" id="incorrect<%= i %>" value="InCorrect"<%=(tasks[i]["is_correct"]==false) ? 'checked' : ""%> /> InCorrect
          </td>
         <td class="col-md-2"> <input type="textarea" name="text_comment<%= i %>" value="<%=tasks[i]['verifier_comments']%>"/></td>
          <td class="col-md-2"><%= tasks[i]['verifier_name']%> </td>
@@ -29,6 +29,8 @@
        }
        }%>
          <td><input type="hidden" id="user_role" name="user_role" value="<%=tasks[i]['_id']%>"> </td>
+         <td><input type="hidden" id="verifier_id" name="verifier_id" value="<%=tasks[i]['verifier_id']%>"> </td>
+         
    </tr>
         
  <% } } %>
