--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -11,13 +11,13 @@
           <div class="form-group">
             <label for="fromDate" class="col-lg-2 control-label">From Date:</label>
             <div class="col-lg-3">
-              <input type="text" class="form-control datepicker" placeholder="mm/dd/yyyy" name="fromDate" value="" autocomplete="off">
+              <input type="text" class="form-control datepicker" id="auditTaskFromDate" placeholder="mm/dd/yyyy" name="fromDate" value="" autocomplete="off">
             </div>
           </div>
            <div class="form-group">
             <label for="toDate" class="col-lg-2 control-label">To Date:</label>
             <div class="col-lg-3">
-              <input type="text" class="form-control datepicker" placeholder="mm/dd/yyy" name="toDate" value="" autocomplete="off">
+              <input type="text" class="form-control datepicker" id="auditTaskToDate" placeholder="mm/dd/yyy" name="toDate" value="" autocomplete="off">
             </div>
           </div>
            <% if (typeof user !== 'undefined') {
