--- a/app/views/users/edit_user.ejs
+++ b/app/views/users/edit_user.ejs
@@ -1,53 +1,53 @@
 <div class="row">
   <div class="col-lg-5 col-sm-offset-3" id="login">
     <div class="well bs-component">
-      <form class="form-horizontal" id="edituser" action="/profile/<%= user.id %>/edit" method="post">
+      <form class="form-horizontal" id="edituser" action="/profile/<%= user_data.id %>/edit" method="post">
         <fieldset>
           <legend>Edit User</legend>
           <div class="form-group">
             <label for="inputEmail" class="col-lg-2 control-label">Name</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" id="inputName" placeholder="Name" name="user[name]" value="<%= user.name %>" required>
+              <input type="text" class="form-control" id="inputName" placeholder="Name" name="user[name]" value="<%= user_data.name %>" required>
             </div>
           </div>
           <div class="form-group">
             <label for="inputEmail" class="col-lg-2 control-label">Email</label>
             <div class="col-lg-10">
-              <input type="email" class="form-control" id="inputEmail" placeholder="Email" name="user[email]" value="<%= user.email %>" required>
+              <input type="email" class="form-control" id="inputEmail" placeholder="Email" name="user[email]" value="<%= user_data.email %>" required>
             </div>
           </div>
           <div class="form-group">
             <label for="inputPassword" class="col-lg-2 control-label">Password</label>
             <div class="col-lg-10">
-              <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="user[password]" value="<%= user.password %>">
+              <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="user[password]" value="<%= user_data.password %>">
             </div>
           </div>
           <div class="form-group" id="ConfirmPassword">
             <label for="inputConfirmPassword" class="col-lg-2 control-label">Confirm Password</label>
             <div class="col-lg-10">
               <label class="control-label" id="ConfirmPasswordLabel">Passwords do not match.</label>
-              <input type="password" class="form-control" id="inputConfirmPassword" placeholder="Password" name="user[confirmpassword]" value="<%= user.password %>">
+              <input type="password" class="form-control" id="inputConfirmPassword" placeholder="Password" name="user[confirmpassword]" value="<%= user_data.password %>">
             </div>
           </div>
           <div class="form-group">
             <label for="inputRole" class="col-lg-2 control-label">Group</label>
-            <div class="col-lg-10 chooseGroupUser" data-group_id="<%= user.group_id %>">
+            <div class="col-lg-10 chooseGroupUser" data-group_id="<%= user_data.group_id %>">
             </div>
           </div>
           <div class="form-group">
             <label for="inputRole" class="col-lg-2 control-label">Roles</label>
             <div class="col-lg-10">
               <div class="checkbox">
-                <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Manager" <%= _und.contains(user.roles, 'Manager') ? 'checked' : ""  %> value="Manager"> Manager
+                <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Manager" <%= _und.contains(user_data.roles, 'Manager') ? 'checked' : ""  %> value="Manager"> Manager
               </div>
               <div class="checkbox">
-                <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Lead" <%= _und.contains(user.roles, 'Lead') ? 'checked' : ""  %> value="Lead"> Lead
+                <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Lead" <%= _und.contains(user_data.roles, 'Lead') ? 'checked' : ""  %> value="Lead"> Lead
               </div>
               <div class="checkbox">
-                <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Analyst" <%= _und.contains(user.roles, 'Analyst') ? 'checked' : ""  %> value="Analyst"> Analyst
+                <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Analyst" <%= _und.contains(user_data.roles, 'Analyst') ? 'checked' : ""  %> value="Analyst"> Analyst
               </div>
               <div class="checkbox">
-                <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Moderator" <%= _und.contains(user.roles, 'Moderator') ? 'checked' : ""  %> value="Moderator"> Moderator
+                <input type="radio" class="role_checkbox" name="user[roles][]" data-role="Moderator" <%= _und.contains(user_data.roles, 'Moderator') ? 'checked' : ""  %> value="Moderator"> Moderator
               </div>
             </div>
           </div>
