--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -93,6 +93,15 @@
       <% } %>
       <%-body%>
     </div>
+    <footer class="text-left">
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-xs-12">
+          &copy;&nbsp;2016 eTouch Systems. All rights reserved.
+          </div>
+        </div>
+    </div>
+</footer>
   </body>
   <script src="../../components/jquery/dist/jquery.min.js"></script>
   <script src="../../components/bootstrap/dist/js/bootstrap.min.js"></script>
