--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,3 +137,13 @@ table tr td.table-inputs {
   width: 110px;
   display: block;
 }
+footer {
+  background: #666;
+  color: #fff;
+  font-size: 14px;
+  padding:15px 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
