--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -69,7 +69,7 @@
               </ul>
 
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" > Hi <%= user.name %></a></li>
+                <li><a href="#" id="loginName"> Hi <%= user.name %></a></li>
                 <li><a href="/logout">Logout</a></li>
               </ul>
             </div>
