Added footer with styles

--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -24,7 +24,7 @@
     <link href="../../css/jquery.jqplot.min.css" rel="stylesheet">
 </head>
   <body>
-    <div class="container">
+    <div class="container main-container">
       <% if (typeof user !== 'undefined') { %>
         <div class="navbar navbar-default navbar-fixed-top">
           <div class="container">
