--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -108,7 +108,7 @@
             <th style="width:200px">&nbsp;&nbsp;&nbsp;</th>
         </tr>
     </thead>
-    <tbody id="users_list">
+    <tbody id="audit_tasks">
     
     </tbody>
   </table>
