--- a/app/views/tasks/view_task.ejs
+++ b/app/views/tasks/view_task.ejs
@@ -6,6 +6,7 @@
          <input type="hidden" id="user_id" name="user_id" value="<%=user._id%>">
          <input type="hidden" id="user_name" name="user_name" value="<%=user.name%>">
          <input type="hidden" id="selecte_user_role" name="selecte_user_role">
+         <input type="hidden" id="viewTaskPage" name="viewTaskPage" value="">
          
         
           <div class="form-group">
@@ -54,7 +55,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody id="users_list">
+    <tbody id="view_tasks">
     
     </tbody>
   </table>
