--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,3 +160,33 @@ footer {
 #save_btn {
   margin-top: -75px;
 }
+
+ul.view_task_pagination {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+
+ul.view_task_pagination li {display: inline;}
+
+ul.view_task_pagination li a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+ul.audit_task_pagination {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+
+ul.audit_task_pagination li {display: inline;}
+
+ul.audit_task_pagination li a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+}
