--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,6 +176,10 @@ ul.view_task_pagination li a {
     text-decoration: none;
 }
 
+ul.view_task_pagination li.active a {
+    color: #d9230f;
+}
+
 ul.audit_task_pagination {
     display: inline-block;
     padding: 0;
@@ -189,4 +193,8 @@ ul.audit_task_pagination li a {
     float: left;
     padding: 8px 16px;
     text-decoration: none;
+}
+
+ul.audit_task_pagination li.active a {
+    color: #d9230f;
 }
