fixed alignment issue of save button

--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -121,7 +121,7 @@
 <% if (typeof user !== 'undefined') {
                   if(user.roles!="Analyst"){
                %>
- <div class="col-lg-10 col-lg-offset-2">
+ <div class="col-lg-10">
    <button type="button" id="save_btn" class="btn btn-success">Save Data</button>
 </div>
  <%  
