--- a/app/views/tasks/audit_search_task.ejs
+++ b/app/views/tasks/audit_search_task.ejs
@@ -16,7 +16,7 @@
               if(user.roles!="Analyst"){
              // console.log(" Conditoionnon ==== ",(tasks[i]["is_correct"]==true));
            %>
-          <td class="col-md-2"><%= tasks[i]['user_name']%> </td>
+       <!--   <td class="col-md-2"><%= tasks[i]['user_name']%> </td>-->
            <td class="col-md-4 table-inputs">
             <input type="radio" name="correct<%= i %>" id="correct<%= i %>" value="Correct" <%= (tasks[i]["is_correct"]==true) ? 'checked' : ""%> /> Correct
             <br/>
