--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -37,7 +37,7 @@
            <%  
               }
            }%>
-        <% if (typeof user !== 'undefined') {
+       <!-- <% if (typeof user !== 'undefined') {
                   if(user.roles!="Analyst"){
                %>
         <div style='float:left ,display: in-line,width: 123px;'>
@@ -66,7 +66,7 @@
             <div class="col-lg-3">
               <input type="checkbox" id="pending_task" name="pending_task" value="PendingTask">
             </div>
-          </div>
+          </div>-->
            <div class="form-group">
             <div class="col-lg-3 col-lg-offset-2">
               <button type="submit" class="btn btn-success">View Task</button>
@@ -94,7 +94,6 @@
             
                   if(user.roles!="Analyst"){
                %>
-             <th data-field="user_name">Analyst Name</th>
             <th data-field="is_correct">Is Correct</th>
             <th data-field="verifier_comments">Verifier Comments</th>
 
