Adding dashboard links

--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -39,9 +39,11 @@
                 <li class="dropdown">
                   <a href="/users">Users</span></a>
                 </li>
-                <li class="dropdown">
-                  <a href="/stats">Statistics</span></a>
-                </li>
+                <% } %>
+                <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Manager')) || (_und.contains(user.roles, 'Lead'))) { %>
+                    <li>
+                      <a href="/stats">dashboard</span></a>
+                    </li>
                 <% } %>
                 <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Analyst')) || (_und.contains(user.roles, 'Lead'))) { %>
                   <li>
