Adding dashboard page

--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -42,7 +42,7 @@
                 <% } %>
                 <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Manager')) || (_und.contains(user.roles, 'Lead'))) { %>
                     <li>
-                      <a href="/stats">dashboard</span></a>
+                      <a href="/stats">Dashboard</span></a>
                     </li>
                 <% } %>
                 <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Analyst')) || (_und.contains(user.roles, 'Lead'))) { %>
