Changes for dashboard pages

--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -105,14 +105,17 @@
     </div>
 </footer>
   </body>
-  <script src="../../components/jquery/dist/jquery.min.js"></script>
-  <script src="../../components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="../../components/underscore/underscore-min.js"></script>
-  <script src="../../js/bootstrap-datepicker.js"></script>
-  <script src="../../js/jquery-ui.js"></script>
-  <script src="../../js/jquery.jqplot.min.js"></script>
-  <script src="../../js/jqplot.pieRenderer.js"></script>
-  <script src="../../js/jquery-dateFormat.min.js"></script>
-  <script src="../../js/custom.js"></script>
+  <script type="text/javascript" src="../../components/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="../../components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../../components/underscore/underscore-min.js"></script>
+  <script type="text/javascript" src="../../js/bootstrap-datepicker.js"></script>
+  <script type="text/javascript" src="../../js/jquery-ui.js"></script>
+  <script type="text/javascript" src="../../js/jquery.jqplot.min.js"></script>
+  <script type="text/javascript" src="../../js/jqplot.pieRenderer.js"></script>
+  <script type="text/javascript" src="../../js/highcharts.js"></script>
+  <script type="text/javascript" src="../../js/exporting.js"></script>
+  <script type="text/javascript" src="../../js/jquery-dateFormat.min.js"></script>
+  <script type="text/javascript" src="../../js/custom.js"></script>
+  <script type="text/javascript" src="../../js/dashboard.js"></script>
 
 </html>
