Changes for performance dashboard

--- a/app/views/users/stats.ejs
+++ b/app/views/users/stats.ejs
@@ -58,20 +58,20 @@
    <div class="col-lg-4" style="margin-top: -48px;">
       <div class="row">
         <h6 style="margin-left:44px">Tasks approved and rejected by Moderator</h6>
-        <div id="chart1" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
+        <div id="chart1" data-tasksApprovedchart="" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
       </div>
    </div>
 
    <div class="col-lg-4" style="margin-top: -48px;">
       <div class="row">
         <h6 style="margin-left:44px" >Tasks reviewed and to be reviewed by Moderator</h6>
-        <div id="chart2" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
+        <div id="chart2" data-tasksReviewedchart="" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
       </div>
    </div>
 
 </div>
 <hr/>
-<div class="row">
+<div class="row" id="userPerformaceDashboard">
    <div class="col-lg-12">
       <div class="row">
         <div id="chart3"></div>
