Fixed issue to get Group list on Audit page for manager and to Fix "Pendiing" text on view task

--- a/app/views/tasks/search_task.ejs
+++ b/app/views/tasks/search_task.ejs
@@ -14,7 +14,7 @@
          <td class="col-md-2"><%= tasks[i]['landing_page_rating']%></td> 
          <td class="col-md-2"><%= tasks[i]['user_comments']%></td>
          <td class="col-md-2"><%= tasks[i]['user_name']%> </td>
-         <% if (!tasks[i].is_correct) { %>
+         <% if ( typeof tasks[i].is_correct =="undefined") { %>
            <td class="col-md-4"><%= "Pending" %></td>
          <% } else { %>
            <td class="col-md-4"><%= tasks[i].is_correct  ? "correct" : "incorrect" %></td>
