Added correct and incorrect text to dashboard

--- a/app/views/users/stats.ejs
+++ b/app/views/users/stats.ejs
@@ -52,7 +52,7 @@
    <div id="TaskPieChart" data-tasks-object="<%= locals.tasks_object %>">
      <div class="col-lg-4" style="margin-top: -48px;">
         <div class="row">
-          <h6 style="margin-left:44px">Tasks approved and rejected by Moderator</h6>
+          <h6 style="margin-left:44px">Tasks correct or incorrect</h6>
           <div id="chart1" data-tasksApprovedchart="" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
         </div>
      </div>
