Fixed for Application halt permanently

--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -63,7 +63,7 @@
                   <a href="/groups">Groups</a>
                 </li>
                 <% } %>
-                <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Analyst')) ||  (_und.contains(user.roles, 'Lead'))) { %>
+                <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Analyst'))) { %>
                   <li>
                     <a href="/upload">Upload Tasks</a>
                   </li>
