--- a/app/views/users/stats.ejs
+++ b/app/views/users/stats.ejs
@@ -44,7 +44,7 @@
          <div class="form-group">
             <label for="users" class="col-lg-5 control-label">&nbsp;</label>
             <div class="col-lg-7">
-               <button type="submit" class="btn btn-success">View Stats</button>
+               <button type="submit" id="dashboard_sbmit_btn" class="btn btn-success">View Stats1</button>
             </div>
          </div>
       </form>
