--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -45,7 +45,7 @@
                       <a href="/stats">Dashboard</span></a>
                     </li>
                 <% } %>
-                <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Analyst')) || (_und.contains(user.roles, 'Lead'))) { %>
+                <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Analyst'))) { %>
                   <li>
                   <a href="/view_task">Tasks</a>
                 </li>
