Changes for Dashboard changes

--- a/app/views/tasks/audit_search_task.ejs
+++ b/app/views/tasks/audit_search_task.ejs
@@ -45,5 +45,5 @@
 
  <% } %>
 <% } else { %>
- <tr><td></td><td></td><td></td><td></td><td></td><td></td><td class="col-md-10">No data Found</td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+ <tr><td></td><td></td><td></td><td></td><td></td><td></td><td class="col-md-10">No data Found</td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 <% } %>
