--- a/app/views/tasks/search_task.ejs
+++ b/app/views/tasks/search_task.ejs
@@ -35,5 +35,5 @@
   </tr>
 <% } %>
 <% } else { %>
- <tr><td></td><td></td><td></td><td></td><td></td><td></td><td class="col-md-10">No data Found</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+ <tr><td></td><td></td><td></td><td></td><td></td><td></td><td class="col-md-10">No data Found</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 <% } %>
