Added alert for on clicking on pagination link without saving on form

--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -6,7 +6,7 @@
          <input type="hidden" id="user_id" name="user_id" value="<%=user._id%>">
          <input type="hidden" id="user_name" name="user_name" value="<%=user.name%>">
          <input type="hidden" id="selecte_user_role" name="selecte_user_role">
-         
+         <input type="hidden" id="inputChanged" name="inputChanged" value="false">
         
           <div class="form-group">
             <label for="fromDate" class="col-lg-2 control-label">From Date:</label>
