--- a/app/views/users/search_by_name.ejs
+++ b/app/views/users/search_by_name.ejs
@@ -1,12 +1,15 @@
 <% for(var i=0; i<users.length; i++) { %>
-	<tr data-user_id="<%= users[i].id %>" data-moderator_id="<%= users[i].manage_by_user_id %>">
-	 <td class="col-md-2"><%= users[i].name %></td>
-	 <td class="col-md-3"><%= users[i].email %></td>
-	 <td class="col-md-2"><input type="checkbox" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Lead" <%= _und.contains(users[i].roles, 'Lead') ? 'checked' : ""  %>></td>
-	 <td class="col-md-2" ><input type="checkbox" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Moderator" <%= _und.contains(users[i].roles, 'Moderator') ? 'checked' : "" %>></td>
-	 <td class="col-md-2" ><input type="checkbox" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Analyst" <%= _und.contains(users[i].roles, 'Analyst') ? 'checked' : ""%>></td>
-	 <td class="col-md-4 chooseModerator"> </td>
-	 <td class="col-md-2" ><input type="checkbox" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Active" <%= users[i].is_active ? 'checked' : "" %>></td>
-	 <td class="col-md-1"><a href="/profile/<%= users[i]._id%>/edit" class="btn btn-success">Edit</a></td>
-	</tr>
+	<tr data-user_id="<%= users[i].id %>" data-group_id="<%= users[i].group_id %>">
+      <td class="col-md-2"><%= users[i].name %></td>
+      <td class="col-md-3"><%= users[i].email %></td>
+
+      <td class="col-md-2"><input type="radio" name="<%= users[i].id %>_role" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Manager" <%= _und.contains(users[i].roles, 'Manager') ? 'checked' : ""  %>></td>
+
+      <td class="col-md-2"><input type="radio" name="<%= users[i].id %>_role" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Lead" <%= _und.contains(users[i].roles, 'Lead') ? 'checked' : ""  %>></td>
+      <td class="col-md-2" ><input type="radio"  name="<%= users[i].id %>_role" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Moderator" <%= _und.contains(users[i].roles, 'Moderator') ? 'checked' : "" %>></td>
+      <td class="col-md-2" ><input type="radio" name="<%= users[i].id %>_role" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Analyst" <%= _und.contains(users[i].roles, 'Analyst') ? 'checked' : ""%>></td>
+      <td class="col-md-4 chooseGroup"> </td>
+      <td class="col-md-2" ><input type="checkbox" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Active" <%= users[i].is_active ? 'checked' : "" %>></td>
+      <td class="col-md-1"><a href="/profile/<%= users[i]._id%>/edit" class="btn btn-success">Edit</a></td>
+   </tr>
 <% } %>
