--- a/app/views/tasks/audit_search_task.ejs
+++ b/app/views/tasks/audit_search_task.ejs
@@ -2,7 +2,7 @@
    if( typeof tasks !== "undefined" ){
    for(var i=0; i<tasks.length; i++) {  %>
      <tr>
-         <td class="col-md-2"><%= i + 1 %></td>
+         <td class="col-md-2"><%= (parseInt(page) == 1 ? (i + 1) : (i + 1 ) == 10 ? (page.toString() +  0) : ((parseInt(page) - 1 ).toString() + (i + 1 )).toString()) %></td>
          <td class="col-md-2"><%= tasks[i].query%></td> 
          <td class="col-md-2"><%= tasks[i]['query_flag']%></td> 
          <td class="col-md-2"><%= tasks[i]['ad_creative']%></td> 
@@ -11,7 +11,7 @@
          <td class="col-md-1 landing_url_wrap wrap"><a target="_blank" href="<%= tasks[i]['landing_page']%>"><%= tasks[i]['landing_page']%></a></td> 
          <td class="col-md-2"><%= tasks[i]['landing_page_flag']%></td> 
          <td class="col-md-2"><%= tasks[i]['landing_page_rating']%></td> 
-          <td class="col-md-2"><%= tasks[i]['user_comments']%></td>
+         <td class="col-md-2"><%= tasks[i]['user_comments']%></td> 
           <% if (typeof user !== 'undefined') {
               if(user.roles!="Analyst"){
              // console.log(" Conditoionnon ==== ",(tasks[i]["is_correct"]==true));
