--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -68,6 +68,9 @@
                     <a href="/upload">Upload Tasks</a>
                   </li>
                 <% } %>
+                <li>
+                    <a href="/uploadaddtask">Upload Adv Tasks</a>
+                  </li>
               </ul>
 
               <ul class="nav navbar-nav navbar-right">
