--- a/app/views/tasks/upload_add_task.ejs
+++ b/app/views/tasks/upload_add_task.ejs
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-lg-5 col-sm-offset-3" id="upload">
     <div class="well bs-component">
-      <form id="taskUpload" class="form-horizontal" action="/upload_new_add_task" method="post" enctype="multipart/form-data">
+
+      <form id="googletaskUpload" class="form-horizontal" action="/upload_new_task" method="post" enctype="multipart/form-data">
         <fieldset>
           <legend>Upload</legend>
           <% console.log("user ==== ",user.group_id)%>
